mobile right white space fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-html {
+body, html {
   min-width: 100%;
 }
 
